--- a/src/buttons/css/buttons.css
+++ b/src/buttons/css/buttons.css
@@ -39,6 +39,7 @@
 .btn-active,
 .btn:active {
     box-shadow: 0 0 0 1px rgba(0,0,0, 0.15) inset, 0 0 6px rgba(0,0,0, 0.20) inset;
+    position: relative;
 }
 
 .btn[disabled],
