--- a/src/buttons.css
+++ b/src/buttons.css
@@ -1,3 +1,12 @@
+/*
+ Pure v0.0.3
+ Copyright 2013 Yahoo! Inc. All rights reserved.
+ Licensed under the BSD License.
+ https://github.com/yui/pure/blob/master/LICENSE.md
+
+ Button improvements from http://tilomitra.github.io/cssextras/
+*/
+
 /* Firefox: Get rid of the inner focus border */
 .btn::-moz-focus-inner {
   padding: 0;
